link different pages

--- a/views/res-random.html
+++ b/views/res-random.html
@@ -20,6 +20,7 @@
     <header>
       <div class="top">
         <svg
+          onclick="location.href='res-list-june.html'"
           width="25px"
           height="25px"
           viewBox="0 0 16 16"
@@ -50,7 +51,7 @@
             >
           </li>
           <li class="nav-item">
-            <a id="bar" class="nav-link" href="bar-random.html">뒤풀이</a>
+            <a id="bar" class="nav-link" href="#">뒤풀이</a>
           </li>
         </ul>
       </div>
@@ -133,7 +134,7 @@
 
     <section class="footer">
       <div class="bottom-nav">
-        <div class="home-nav">
+        <div onclick="location.href='#'" class="home-nav">
           <svg
             width="18px"
             height="20px"
@@ -154,7 +155,7 @@
             홈화면
           </div>
         </div>
-        <div class="res-nav">
+        <div onclick="location.href='res-list-june.html'" class="res-nav">
           <svg
             width="20px"
             height="20px"
@@ -172,7 +173,7 @@
             밥약
           </div>
         </div>
-        <div class="bar-nav">
+        <div onclick="location.href='barList.html'" class="bar-nav">
           <svg
             width="24px"
             height="20px"
@@ -191,13 +192,13 @@
           </div>
         </div>
 
-        <div class="random-nav">
+        <div onclick="location.href='res-random.html'" class="random-nav">
           <svg
             width="20px"
             height="20px"
             viewBox="0 0 16 16"
             class="bi bi-arrow-repeat"
-            fill="#c3c3c3"
+            fill="#5cb85c"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
