--- a/views/restaurant/바오밥.html
+++ b/views/restaurant/바오밥.html
@@ -199,6 +199,9 @@
       </div>
     </div>
 </div>
+<div class="callbtn">
+  <button type="button" class="btn btn-primary btn-lg">바로 예약하기</button>
+</div>
     <script>
     var map = new naver.maps.Map("map", {
       center: new naver.maps.LatLng(37.581803,127.0011239),
