--- a/views/restaurant/파스타마켓.html
+++ b/views/restaurant/파스타마켓.html
@@ -16,6 +16,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="custom.css">
     <style>
         h2 {
             font-size : 25px;
@@ -196,6 +197,9 @@
       >
         <div id="map" style="width: 100%; height: 400px;"></div>
       </div>
+    </div>
+    <div class="callbtn">
+      <button type="button" class="btn btn-primary btn-lg">바로 예약하기</button>
     </div>
 </div>
     <script>
