--- a/views/restaurant/혜화칼국수.html
+++ b/views/restaurant/혜화칼국수.html
@@ -16,62 +16,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <style>
-        h2 {
-            font-size : 25px;
-            text-align: center;
-        }
-
-        p {
-            text-align: center;
-        }
-
-        table {
-            margin-top : 10px;
-            margin-bottom: 10px;
-            font-size : 12px;
-        }
-
-        td {
-          padding : 10px;
-          border-bottom: 1px solid #e0e0e0;
-        }
-
-        .tab-menu, .tab-info {
-          width : 100%;
-        }
-
-        #price {
-          width : 30%;
-          text-align: right;
-        }
-
-        #icon {
-          width : 10%;
-          text-align: center;
-        }
-
-        img{
-        width: 100%;
-        height: 250px;
-        }
-        #ArrowLeft{
-            height: 50px;
-        }
-        .class{
-            font-size: small;
-            text-align: center;
-        }
-        h2{
-            font-weight: bold;
-            font-size: x-large;
-            margin-top: 15px;
-        }
-        #detail{
-            font-size: small;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="custom.css">
   </head>
   <body>
     <div id="ArrowLeft"><svg width="25px" height="25px" viewBox="0 0 16 8" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -187,7 +132,7 @@
                     <path d="M4.75 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM2 8.854V15h12V8.854a3.354 3.354 0 0 0 1-.27V15h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V8.583c.311.14.647.232 1 .271zm0-1.008V7H1v.437c.291.207.632.35 1 .409zm13-.409c-.291.207-.632.35-1 .409V7h1v.437z"/>
                     <path d="M4 13V9H3v4a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V9h-1v4H4z"/>
                   </svg></td>
-                <td>https://store.naver.com/restaurants/detail?entry=pll&id=11678822&query=%ED%98%9C%ED%99%94%EC%B9%BC%EA%B5%AD%EC%88%98</td>
+                <td>http://bitly.kr/kLGZ2VMLo5ww</td>
             </tr>
         </tbody>
     </table>
@@ -201,6 +146,9 @@
         <div id="map" style="width: 100%; height: 400px;"></div>
       </div>
     </div>
+</div>
+<div class="callbtn">
+  <button type="button" class="btn btn-primary btn-lg">바로 예약하기</button>
 </div>
     <script>
       var map = new naver.maps.Map("map", {
