--- a/views/restaurant/custom.css
+++ b/views/restaurant/custom.css
@@ -15,7 +15,7 @@ table {
 
 td {
   padding : 10px;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #dddddd;
 }
 
 .tab-menu, .tab-info {
@@ -64,5 +64,16 @@ h2{
     margin-bottom: 2em;
     position : fixed;
     right : 20%;
-    bottom : 0.8%;
+    bottom : 1%;
+    font-size: 17px;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    color: #5cb85c;
+    border: solid 1px #5cb85c;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link{
+    color:#373a3c;
+    border-bottom: solid 1px #5cb85c;
 }
