--- a/views/bar-random.html
+++ b/views/bar-random.html
@@ -56,7 +56,7 @@
     </section>
     <section class="mainbody">
       <div class="card">
-        <img id="imgimg" src="http://blogfiles.naver.net/MjAxOTA5MjRfMjYy/MDAxNTY5MzM1MjAxMTM3.lr0UWf_nPfkIuw9yHiznFAWU6mfRemiJ_GfEqoYu_SIg.wk8VurG52mpDRVvG326woYPYFrY7442A505vmANkXs8g.JPEG.ekwjd373/IMG_2159.jpg" class="card-img-top" alt="..." />
+        <img id="imgimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR-4_OD4DmRe9x9gHXXLqm2-9jH6tdy9Nr_Hw&usqp=CAU" class="card-img-top" alt="..." />
         <div class="card-body">
           <p id="name" class="card-text">
             술부심
