--- a/views/restaurant/custom.css
+++ b/views/restaurant/custom.css
@@ -1,3 +1,56 @@
+html{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+body {
+    width : 360px;
+
+}
+
+.bgbox {
+    background-color : #5cb85c86;
+    position : absolute;
+    top : 37%;
+    left : 10%;
+    height : 63%;
+    width : 90%;
+    z-index: -1;
+   }
+  
+  .ttl_main {
+   text-align: center;
+   padding-top : 40%;
+   padding-bottom: 20%;;
+  }
+  
+  .ttl_main p {
+    font-size: 20px;
+    color : #5cb85c;
+    margin-bottom: auto;
+  }
+  
+  .h1wrapper h1{
+    display: inline-block;
+    font-size: 35px;
+  }
+  
+  #h1_01{
+    color:#4b92d9;
+  }
+  
+  .btn_idx {
+    background-color: rgba(75, 146, 217, 0.85);
+    border : none;
+    padding : 3%;
+    width : 200px;
+    margin : 2% 17.5%;
+    color : white;
+     border-radius: 5px;
+     font-size: 20px;
+  }
+
+
 h2 {
     font-size : 25px;
     text-align: center;
@@ -60,10 +113,11 @@ h2{
 
 .callbtn .btn-primary {
     background-color:#4b92d9;
-    width : 60%;
+    width : 50%;
     margin-bottom: 2em;
     position : fixed;
-    right : 20%;
+    align-items: center;
+    left : 25%;
     bottom : 1%;
     font-size: 17px;
 }
