--- a/views/barList.html
+++ b/views/barList.html
@@ -15,9 +15,7 @@
     <style>
         #containall{
             position: relative;
-            width : 360px;
-            margin-left: auto;
-            margin-right: auto;
+            width : 100%;
             border : solid rgba(0, 0, 0, 0.125) 0.5px;
             box-sizing: content-box;
         }
@@ -25,7 +23,7 @@
         .headcontain{
             position: relative;
             height : 50px;
-            width : 360px;
+            width : 100%;
             border-bottom: solid 0.5px rgba(0, 0, 0, 0.125);
             z-index: 999999999;
 
@@ -292,7 +290,7 @@
 
 
             <div class="card">
-                <img src="../public/img/포차야.jpg" class="card-img-top" alt="...">
+                <img src="/img/포차야.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                 <p class="card-text"><a href="">포차야</a></p>
                 <div class="card-point"><svg width="9.4px" height="8.9px" viewBox="0 0 16 16" class="bi bi-star-fill" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
