--- a/views/res-list-june.html
+++ b/views/res-list-june.html
@@ -11,7 +11,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../public/css/res-list-june.css">
+    <link rel="stylesheet" href="/css/res-list-june.css">
   </head>
   <body>
     <!--부트스트랩 JS-->
@@ -39,7 +39,7 @@
         <div class="row row-cols-2">
           <div class="col">
             <a href="##">
-            <img src="../public/img/밥집/메밀향그집.jpg" class="card-img-top" alt="...">
+            <img src="/img/밥집/메밀향그집.jpg" class="card-img-top" alt="...">
            </a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">메밀향 그 집</h5></a>
@@ -63,7 +63,7 @@
           </div>
           
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/청춘직화.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/청춘직화.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">청춘직화</h5></a>
               <div class="star_score">
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/바오밥.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/바오밥.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">바오밥</h5></a>
               <div class="star_score">
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/깔리.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/깔리.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">깔리</h5></a>
               <div class="star_score">
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/명륜건강원.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/명륜건강원.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">명륜건강원</h5></a>
               <div class="star_score">
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/버거파크.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/버거파크.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">버거파크</h5></a>
               <div class="star_score">
@@ -168,7 +168,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/부부식당.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/부부식당.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">부부식당</h5></a>
               <div class="star_score">
@@ -190,7 +190,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/산쪼메.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/산쪼메.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">산쪼메</h5></a>
               <div class="star_score">
@@ -212,7 +212,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/소친친.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/소친친.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">소친친</h5></a>
               <div class="star_score">
@@ -234,7 +234,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/정돈.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/정돈.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">정돈 대학로 본점</h5></a>
               <div class="star_score">
@@ -256,7 +256,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/쪼리닭.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/쪼리닭.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">쪼리닭</h5>
               <div class="star_score">
@@ -278,7 +278,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/파스타마켓.jpeg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/파스타마켓.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">파스타마켓</h5></a>
               <div class="star_score">
@@ -300,7 +300,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/혜화칼국수.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/혜화칼국수.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">혜화칼국수</h5></a>
               <div class="star_score">
@@ -322,7 +322,7 @@
           </div>
 
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/호호식당.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="/img/밥집/호호식당.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">호호식당</h5></a>
               <div class="star_score">
@@ -350,7 +350,7 @@
       <div class="container">
         <div class="row row-cols-4">
           <div class="col">
-            <a href="##">
+            <a href="/">
               <svg id="home" class="icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
                 <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
@@ -362,7 +362,7 @@
           </div>
 
           <div class="col">
-            <a href="res-list-june.html">
+            <a href="/restaurant">
               <svg id="person" class="icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
               </svg>
@@ -372,7 +372,7 @@
           </div>
 
           <div class="col">
-            <a href="##">
+            <a href="/bar">
               <svg id="people" class="icon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
               </svg>
@@ -383,7 +383,7 @@
 
 
           <div class="col">
-            <a href="res-random.html">
+            <a href="/random">
               <svg id="random" class="icon" idth="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-repeat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L2.5 8.207l1.646 1.647a.5.5 0 0 0 .708-.708l-2-2zm13-1a.5.5 0 0 0-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0 0-.708z"/>
                 <path fill-rule="evenodd" d="M8 3a4.995 4.995 0 0 0-4.192 2.273.5.5 0 0 1-.837-.546A6 6 0 0 1 14 8a.5.5 0 0 1-1.001 0 5 5 0 0 0-5-5zM2.5 7.5A.5.5 0 0 1 3 8a5 5 0 0 0 9.192 2.727.5.5 0 1 1 .837.546A6 6 0 0 1 2 8a.5.5 0 0 1 .501-.5z"/>
