--- a/views/bar-random.html
+++ b/views/bar-random.html
@@ -12,8 +12,8 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <script src="/js/bar-random.js"></script>
-    <link rel="stylesheet" href="/css/bar-random.css"/>
+    <script src="../public/js/bar-random.js"></script>
+    <link rel="stylesheet" href="../public/css/bar-random.css"/>
   </head>
 
   <body>
@@ -226,6 +226,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/res-random.js"></script>
+    <script src="../public/js/res-random.js"></script>
   </body>
 </html>
