--- a/views/restaurant/바오밥.html
+++ b/views/restaurant/바오밥.html
@@ -16,76 +16,8 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <style>
-       img{
-            width: 100%;
-            height: 250px;
-        }
-
-        #ArrowLeft{
-        height: 50px;
-        }
-        
-        .class{
-            font-size: small;
-            text-align: center;
-        }
-        h2{
-            font-weight: bold;
-            font-size: x-large;
-            margin-top: 15px;
-        }
-        #detail{
-            font-size: small;
-        }
-        
-        h2 {
-            font-size : 25px;
-            text-align: center;
-        }
-
-        p {
-            text-align: center;
-        }
-
-        table {
-            margin-top : 10px;
-            margin-bottom: 10px;
-            font-size : 12px;
-        }
-
-        td {
-          padding : 10px;
-          border-bottom: 1px solid #e0e0e0;
-        }
-
-        .tab-menu, .tab-info {
-          width : 100%;
-        }
-
-        #price {
-          width : 30%;
-          text-align: right;
-        }
-
-        #icon {
-          width : 10%;
-          text-align: center;
-        }
-        #call{
-          background-color: #4b92d9;
-          color : white;
-          border: transparent;
-          width: 190px;
-          height: 45px;
-          border-radius: 4px;
-          margin-top: 10px;
-          margin-bottom: 15px;
-          position : absolute;
-          left:0; right:0; margin-left:auto; margin-right:auto;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="custom.css">
+  
   </head>
   <body>
     <div id="ArrowLeft"><svg width="25px" height="25px" viewBox="0 0 16 8" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -237,6 +169,8 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <div class="callbtn">
     <input type="button" id="call" value="바로 예약하기" onclick="location.href='tel:02-764-7778'">
+    </div>
   </body>
 </html>
