--- a/views/restaurant/custom.css
+++ b/views/restaurant/custom.css
@@ -5,19 +5,25 @@ html{
 }
 body {
     width : 360px;
-
 }
 
 .bgbox {
     background-color : #5cb85c86;
     position : absolute;
     top : 37%;
-    left : 10%;
+    left : 15%;
     height : 63%;
-    width : 90%;
+    width : 360px;
     z-index: -1;
    }
-  
+
+   @media (min-width : 380px) {
+       .bgbox {
+           display : none;
+
+       }
+   }
+
   .ttl_main {
    text-align: center;
    padding-top : 40%;
