--- a/views/restaurant/깔리.html
+++ b/views/restaurant/깔리.html
@@ -151,19 +151,23 @@
         role="tabpanel"
         aria-labelledby="location-tab"
       >
-        <div id="map" style="width: 100%; height: 400px;"></div>
+        <div id="map" style="width: 100%; height: 400px; text-align: center;"onclick="javascript:mapfunction()">
+          지도를 확인하려면 클릭해주세요! 
+        </div>
       </div>
     </div>
 </div>
   <script>
-var map = new naver.maps.Map("map", {
-  center: new naver.maps.LatLng(37.5824807,126.9992782),
-  zoom: 16,
-});
-var marker = new naver.maps.Marker({
-  position: map.center,
-  map: map,
-});
+    function mapfunction(){
+      var map = new naver.maps.Map("map", {
+      center: new naver.maps.LatLng(37.5824807,126.9992782),
+      zoom: 16,
+    });
+      var marker = new naver.maps.Marker({
+      position: map.center,
+      map: map,
+    });
+  }
 </script>
     <!--부트스트랩 JS-->
     <script
