--- a/views/restaurant/바오밥.html
+++ b/views/restaurant/바오밥.html
@@ -139,12 +139,15 @@
         role="tabpanel"
         aria-labelledby="location-tab"
       >
-        <div id="map" style="width: 100%; height: 400px;"></div>
+      <div id="map" style="width: 100%; height: 400px; text-align: center;"onclick="javascript:mapfunction()">
+        지도를 확인하려면 클릭해주세요! 
+      </div>
       </div>
     </div>
 </div>
 <script>
-  var map = new naver.maps.Map("map", {
+  function mapfunction(){
+    var map = new naver.maps.Map("map", {
     center: new naver.maps.LatLng(37.5824454,126.9996727),
     zoom: 16,
   });
@@ -152,6 +155,7 @@
     position: map.center,
     map: map,
   });
+  }
 </script>
     <!--부트스트랩 JS-->
     <script
