--- a/views/restaurant/소친친.html
+++ b/views/restaurant/소친친.html
@@ -132,12 +132,15 @@
         role="tabpanel"
         aria-labelledby="location-tab"
       >
-        <div id="map" style="width: 100%; height: 400px;"></div>
+      <div id="map" style="width: 100%; height: 400px; text-align: center;"onclick="javascript:mapfunction()">
+        지도를 확인하려면 클릭해주세요! 
+      </div>
       </div>
     </div>
 </div>
 <script>
-  var map = new naver.maps.Map("map", {
+  function mapfucntion(){
+    var map = new naver.maps.Map("map", {
     center: new naver.maps.LatLng(37.5826114,126.9997615),
     zoom: 16,
   });
@@ -145,6 +148,7 @@
     position: map.center,
     map: map,
   });
+}  
 </script>
     <!--부트스트랩 JS-->
     <script
